--- a/index.html
+++ b/index.html
@@ -9,76 +9,78 @@
 <body>
     <header>
         WebStudio
-        <ul>
-            <li><a href="./index.html">Студия</a></li>
-            <li>Портфолио</li>
-            <li>Контакты</li>
-        </ul>
-        <address>
+        <nav>
+            <a href="./index.html">Студия</a>
+            <span>Портфолио</span>
+            <span>Контакты</span>
+        </nav>
+        <span>
             <a href="mailto:info@devstudio.com">info@devstudio.com</a>
             <a href="tel:+380961111111">+38 096 111 11 11</a>
-        </address>
+        <span>
 
     </header>
-    <div>
-        <h1>Эффективные решения для вашего бизнеса</h1>
-        <button type="button">Заказать услугу</button>
-    </div>
-    <section>
-        <h2>Наши преимущества</h2>
-        <ul>
-            <li>
-                <h3>Внимание к деталям</h3>
-                <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
-            </li>
-            <li>
-                <h3>Пунктуальность</h3>
-                <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
-            </li>
-            <li>
-                <h3>Планирование</h3>
-                <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
-            </li>
-            <li>
-                <h3>Современные технологии</h3>
-                <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
-            </li>
-         </ul>
-    </section>
-    <section>
-        <h2>Чем мы занимаемся</h2>
-        <ul>
-            <li>
-                <img src="./images/box1.svg" alt="Человек работает с кодом" width="370">
-            </li>
-            <li>
-                <img src="./images/box2.svg" alt="Человек работает со стилями"  width="370">
-            </li>
-            <li>
-                <img src="./images/box3.svg" alt="Человек работает выбирает цвет" >
-            </li>
-        </ul>
-    </section>
-    <section>
-        <h2>Наша команда</h2>
-      <figure>
-          <img src="./images/team1.svg" alt="Игорь Демьяненко">
-          <figcaption>Игорь Демьяненко<p>Product Designer</p></figcaption>
-          
-      </figure>
-      <figure>
-          <img src="./images/team2.svg" alt="Ольга Репина">
-          <figcaption>Ольга Репина<p>Frontend Developer</p></figcaption>
-      </figure>
-      <figure>
-          <img src="./images/team3.svg" alt="Николай Тарасов">
-          <figcaption>Николай Тарасов<p>Marketing</p></figcaption>
-      </figure>
-      <figure>
-          <img src="./images/team4.svg" alt="Михаил Ермаков">
-          <figcaption>Михаил Ермаков<p>UI Designer</p></figcaption>
-      </figure>
-    </section>
+    <main>
+        <div>
+            <h1>Эффективные решения для вашего бизнеса</h1>
+            <button type="button">Заказать услугу</button>
+        </div>
+        <section>
+            <h2>Наши преимущества</h2>
+            <ul>
+                <li>
+                    <h3>Внимание к деталям</h3>
+                    <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+                </li>
+                <li>
+                    <h3>Пунктуальность</h3>
+                    <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+                </li>
+                <li>
+                    <h3>Планирование</h3>
+                    <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+                </li>
+                <li>
+                    <h3>Современные технологии</h3>
+                    <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+                </li>
+            </ul>
+        </section>
+        <section>
+            <h2>Чем мы занимаемся</h2>
+            <ul>
+                <li>
+                    <img src="./images/img1.jpg" alt="Человек работает с кодом" width="370">
+                </li>
+                <li>
+                    <img src="./images/img2.jpg" alt="Человек работает со стилями"  width="370">
+                </li>
+                <li>
+                    <img src="./images/img3.jpg" alt="Человек работает выбирает цвет" >
+                </li>
+            </ul>
+        </section>
+        <section>
+            <h2>Наша команда</h2>
+        <figure>
+            <img src="./images/team1.jpg" alt="Игорь Демьяненко" width="270">
+            <figcaption>Игорь Демьяненко<p>Product Designer</p></figcaption>
+            
+        </figure>
+        <figure>
+            <img src="./images/team2.jpg" alt="Ольга Репина"  width="270">
+            <figcaption>Ольга Репина<p>Frontend Developer</p></figcaption>
+        </figure>
+        <figure>
+            <img src="./images/team3.jpg" alt="Николай Тарасов"  width="270">
+            <figcaption>Николай Тарасов<p>Marketing</p></figcaption>
+        </figure>
+        <figure>
+            <img src="./images/team4.jpg" alt="Михаил Ермаков">
+            <figcaption>Михаил Ермаков<p>UI Designer</p></figcaption>
+        </figure>
+        </section>
+    </main>
     <footer>
         WebStudio
         <address>
