--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <span>
             <a href="mailto:info@devstudio.com">info@devstudio.com</a>
             <a href="tel:+380961111111">+38 096 111 11 11</a>
-        <span>
+        </span>
 
     </header>
     <main>
