--- a/index.html
+++ b/index.html
@@ -8,23 +8,23 @@
 </head>
 <body>
     <header>
-        WebStudio
-        <nav>
-            <a href="./index.html">Студия</a>
-            <span>Портфолио</span>
-            <span>Контакты</span>
-        </nav>
-        <span>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-            <a href="tel:+380961111111">+38 096 111 11 11</a>
-        </span>
+        <a href="./index.html">WebStudio</a>
+        <ul>
+            <li><a href="./index.html">Студия</a></li>
+            <li><a href="">Портфолио</a></li>
+            <li><a href="">Контакты</a></li>
+        </ul>
+        <ul>
+            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        </ul>
 
     </header>
     <main>
-        <div>
+        <section>
             <h1>Эффективные решения для вашего бизнеса</h1>
             <button type="button">Заказать услугу</button>
-        </div>
+        </section>
         <section>
             <h2>Наши преимущества</h2>
             <ul>
@@ -62,32 +62,34 @@
         </section>
         <section>
             <h2>Наша команда</h2>
-        <figure>
-            <img src="./images/team1.jpg" alt="Игорь Демьяненко" width="270">
-            <figcaption>Игорь Демьяненко<p>Product Designer</p></figcaption>
-            
-        </figure>
-        <figure>
-            <img src="./images/team2.jpg" alt="Ольга Репина"  width="270">
-            <figcaption>Ольга Репина<p>Frontend Developer</p></figcaption>
-        </figure>
-        <figure>
-            <img src="./images/team3.jpg" alt="Николай Тарасов"  width="270">
-            <figcaption>Николай Тарасов<p>Marketing</p></figcaption>
-        </figure>
-        <figure>
-            <img src="./images/team4.jpg" alt="Михаил Ермаков">
-            <figcaption>Михаил Ермаков<p>UI Designer</p></figcaption>
-        </figure>
+        <ul>
+            <li>
+                <img src="./images/team1.jpg" alt="Игорь Демьяненко" width="270">
+                <h3>Игорь Демьяненко</h3><p>Product Designer</p>
+            </li>
+            <li>
+                <img src="./images/team2.jpg" alt="Ольга Репина"  width="270">
+                <h3>Ольга Репина</h3><p>Frontend Developer</p>
+            </li>
+            <li>
+                <img src="./images/team3.jpg" alt="Николай Тарасов"  width="270">
+                <h3>Николай Тарасов</h3><p>Marketing</p>
+            </li>
+            <li>
+                <img src="./images/team4.jpg" alt="Михаил Ермаков">
+                <h3>Михаил Ермаков</h3><p>UI Designer</p>
+            </li>
+        </ul>
         </section>
     </main>
     <footer>
-        WebStudio
+        <a href="./index.html">WebStudio</a>
         <address>
-            г. Киев, пр-т Леси Украинки, 26 <br />
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a><br />
-            <a href="tel:+380961111111">+38 096 111 11 11</a>
-            
+           <p>г. Киев, пр-т Леси Украинки, 26</p> 
+           <ul>
+                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+            </ul>
         </address>
     </footer>
 </body>
