--- a/index.html
+++ b/index.html
@@ -1,98 +1,145 @@
 <!DOCTYPE html>
 <html lang="ru">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WebStudio</title>
-</head>
-<body>
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
+  </head>
+  <body>
     <header>
-        <a href="./index.html">WebStudio</a>
-        <nav>
-            <ul>
-                <li><a href="./index.html">Студия</a></li>
-                <li><a href="">Портфолио</a></li>
-                <li><a href="">Контакты</a></li>
-            </ul>
-        </nav>
-        <ul>
-            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+      <a href="./index.html" class="logo"
+        ><span class="logo-item">Web</span>Studio</a
+      >
+      <nav>
+        <ul class="list">
+          <li><a href="./index.html" class="link">Студия</a></li>
+          <li><a href="./portfolio.html" class="link">Портфолио</a></li>
+          <li><a href="" class="link">Контакты</a></li>
         </ul>
-
+      </nav>
+      <ul class="list">
+        <li>
+          <a href="mailto:info@devstudio.com" class="contact-list"
+            >info@devstudio.com</a
+          >
+        </li>
+        <li>
+          <a href="tel:+380961111111" class="contact-list">+38 096 111 11 11</a>
+        </li>
+      </ul>
     </header>
     <main>
-        <section>
-            <h1>Эффективные решения для вашего бизнеса</h1>
-            <button type="button">Заказать услугу</button>
-        </section>
-        <section>
-            <h2>Наши преимущества</h2>
-            <ul>
-                <li>
-                    <h3>Внимание к деталям</h3>
-                    <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
-                </li>
-                <li>
-                    <h3>Пунктуальность</h3>
-                    <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
-                </li>
-                <li>
-                    <h3>Планирование</h3>
-                    <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
-                </li>
-                <li>
-                    <h3>Современные технологии</h3>
-                    <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
-                </li>
-            </ul>
-        </section>
-        <section>
-            <h2>Чем мы занимаемся</h2>
-            <ul>
-                <li>
-                    <img src="./images/img1.jpg" alt="Человек работает с кодом" width="370">
-                </li>
-                <li>
-                    <img src="./images/img2.jpg" alt="Человек работает со стилями"  width="370">
-                </li>
-                <li>
-                    <img src="./images/img3.jpg" alt="Человек работает выбирает цвет" >
-                </li>
-            </ul>
-        </section>
-        <section>
-            <h2>Наша команда</h2>
-        <ul>
-            <li>
-                <img src="./images/team1.jpg" alt="Игорь Демьяненко" width="270">
-                <h3>Игорь Демьяненко</h3><p>Product Designer</p>
-            </li>
-            <li>
-                <img src="./images/team2.jpg" alt="Ольга Репина"  width="270">
-                <h3>Ольга Репина</h3><p>Frontend Developer</p>
-            </li>
-            <li>
-                <img src="./images/team3.jpg" alt="Николай Тарасов"  width="270">
-                <h3>Николай Тарасов</h3><p>Marketing</p>
-            </li>
-            <li>
-                <img src="./images/team4.jpg" alt="Михаил Ермаков">
-                <h3>Михаил Ермаков</h3><p>UI Designer</p>
-            </li>
+      <section class="hero">
+        <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
+        <button type="button" class="button">Заказать услугу</button>
+      </section>
+      <section class="advantage">
+        <h2>Наши преимущества</h2>
+        <ul class="list">
+          <li>
+            <h3 class="sub-title">Внимание к деталям</h3>
+            <p class="text">
+              Идейные соображения, а также начало повседневной работы по
+              формированию позиции.
+            </p>
+          </li>
+          <li>
+            <h3 class="sub-title">Пунктуальность</h3>
+            <p class="text">
+              Задача организации, в особенности же рамки и место обучения кадров
+              влечет за собой.
+            </p>
+          </li>
+          <li>
+            <h3 class="sub-title">Планирование</h3>
+            <p class="text">
+              Равным образом консультация с широким активом в значительной
+              степени обуславливает.
+            </p>
+          </li>
+          <li>
+            <h3 class="sub-title">Современные технологии</h3>
+            <p class="text">
+              Значимость этих проблем настолько очевидна, что реализация
+              плановых заданий.
+            </p>
+          </li>
         </ul>
-        </section>
+      </section>
+      <section class="job">
+        <h2 class="title">Чем мы занимаемся</h2>
+        <ul class="list">
+          <li>
+            <img
+              src="./images/img1.jpg"
+              alt="Человек работает с кодом"
+              width="370"
+            />
+          </li>
+          <li>
+            <img
+              src="./images/img2.jpg"
+              alt="Человек работает со стилями"
+              width="370"
+            />
+          </li>
+          <li>
+            <img src="./images/img3.jpg" alt="Человек работает выбирает цвет" />
+          </li>
+        </ul>
+      </section>
+      <section class="team">
+        <h2 class="title">Наша команда</h2>
+        <ul class="list">
+          <li>
+            <img src="./images/team1.jpg" alt="Игорь Демьяненко" width="270" />
+            <h3 class="team-sub-title">Игорь Демьяненко</h3>
+            <p class="team-text">Product Designer</p>
+          </li>
+          <li>
+            <img src="./images/team2.jpg" alt="Ольга Репина" width="270" />
+            <h3 class="team-sub-title">Ольга Репина</h3>
+            <p class="team-text">Frontend Developer</p>
+          </li>
+          <li>
+            <img src="./images/team3.jpg" alt="Николай Тарасов" width="270" />
+            <h3 class="team-sub-title">Николай Тарасов</h3>
+            <p class="team-text">Marketing</p>
+          </li>
+          <li>
+            <img src="./images/team4.jpg" alt="Михаил Ермаков" />
+            <h3 class="team-sub-title">Михаил Ермаков</h3>
+            <p class="team-text">UI Designer</p>
+          </li>
+        </ul>
+      </section>
     </main>
     <footer>
-        <a href="./index.html">WebStudio</a>
-        <address>
-           <p>г. Киев, пр-т Леси Украинки, 26</p> 
-           <ul>
-                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
-            </ul>
-        </address>
+      <a href="./index.html" class="footer-logo"
+        ><span class="logo-item">Web</span>Studio</a
+      >
+      <address>
+        <p class="footer-text">г. Киев, пр-т Леси Украинки, 26</p>
+        <ul class="list">
+          <li>
+            <a href="mailto:info@devstudio.com" class="footer-contacts"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li>
+            <a href="tel:+380961111111" class="footer-contacts"
+              >+38 096 111 11 11</a
+            >
+          </li>
+        </ul>
+      </address>
     </footer>
-</body>
+  </body>
 </html>
