--- a/portfolio.html
+++ b/portfolio.html
@@ -130,11 +130,11 @@
         </ul>
       </section>
     </main>
-    <footer>
+    <footer class="footer-bcg">
       <a href="./index.html" class="footer-logo"
         ><span class="logo-item">Web</span>Studio</a
       >
-      <address>
+      <address class="address">
         <p class="footer-text">г. Киев, пр-т Леси Украинки, 26</p>
         <ul class="list">
           <li>
