--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/normalize/1.0.0/normalize.min.css"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
@@ -41,7 +45,7 @@
         <button type="button" class="button">Заказать услугу</button>
       </section>
       <section class="advantage">
-        <h2>Наши преимущества</h2>
+        <h2 class="visually-hidden">Наши преимущества</h2>
         <ul class="list">
           <li>
             <h3 class="sub-title">Внимание к деталям</h3>
@@ -121,11 +125,11 @@
         </ul>
       </section>
     </main>
-    <footer>
+    <footer class="footer-bcg">
       <a href="./index.html" class="footer-logo"
         ><span class="logo-item">Web</span>Studio</a
       >
-      <address>
+      <address class="address">
         <p class="footer-text">г. Киев, пр-т Леси Украинки, 26</p>
         <ul class="list">
           <li>
