--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       >
       <nav>
         <ul class="list">
-          <li><a href="./index.html" class="link">Студия</a></li>
+          <li><a href="./index.html" class="link is-active">Студия</a></li>
           <li><a href="./portfolio.html" class="link">Портфолио</a></li>
           <li><a href="" class="link">Контакты</a></li>
         </ul>
