--- a/portfolio.html
+++ b/portfolio.html
@@ -24,7 +24,9 @@
       <nav>
         <ul class="list">
           <li><a href="./index.html" class="link">Студия</a></li>
-          <li><a href="./portfolio.html" class="link">Портфолио</a></li>
+          <li>
+            <a href="./portfolio.html" class="link is-active">Портфолио</a>
+          </li>
           <li><a href="" class="link">Контакты</a></li>
         </ul>
       </nav>
