--- a/index.html
+++ b/index.html
@@ -17,133 +17,158 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <header>
-      <a href="./index.html" class="logo"
-        ><span class="logo-item">Web</span>Studio</a
-      >
-      <nav>
-        <ul class="list">
-          <li><a href="./index.html" class="link is-active">Студия</a></li>
-          <li><a href="./portfolio.html" class="link">Портфолио</a></li>
-          <li><a href="" class="link">Контакты</a></li>
-        </ul>
-      </nav>
-      <ul class="list">
-        <li>
-          <a href="mailto:info@devstudio.com" class="contact-list"
-            >info@devstudio.com</a
-          >
-        </li>
-        <li>
-          <a href="tel:+380961111111" class="contact-list">+38 096 111 11 11</a>
-        </li>
-      </ul>
-    </header>
-    <main>
-      <section class="hero">
-        <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
-        <button type="button" class="button">Заказать услугу</button>
-      </section>
-      <section class="advantage">
-        <h2 class="visually-hidden">Наши преимущества</h2>
-        <ul class="list">
-          <li>
-            <h3 class="sub-title">Внимание к деталям</h3>
-            <p class="text">
-              Идейные соображения, а также начало повседневной работы по
-              формированию позиции.
-            </p>
-          </li>
-          <li>
-            <h3 class="sub-title">Пунктуальность</h3>
-            <p class="text">
-              Задача организации, в особенности же рамки и место обучения кадров
-              влечет за собой.
-            </p>
-          </li>
-          <li>
-            <h3 class="sub-title">Планирование</h3>
-            <p class="text">
-              Равным образом консультация с широким активом в значительной
-              степени обуславливает.
-            </p>
-          </li>
-          <li>
-            <h3 class="sub-title">Современные технологии</h3>
-            <p class="text">
-              Значимость этих проблем настолько очевидна, что реализация
-              плановых заданий.
-            </p>
-          </li>
-        </ul>
-      </section>
-      <section class="job">
-        <h2 class="title">Чем мы занимаемся</h2>
-        <ul class="list">
-          <li>
-            <img
-              src="./images/img1.jpg"
-              alt="Человек работает с кодом"
-              width="370"
-            />
-          </li>
-          <li>
-            <img
-              src="./images/img2.jpg"
-              alt="Человек работает со стилями"
-              width="370"
-            />
-          </li>
-          <li>
-            <img src="./images/img3.jpg" alt="Человек работает выбирает цвет" />
-          </li>
-        </ul>
-      </section>
-      <section class="team">
-        <h2 class="title">Наша команда</h2>
-        <ul class="list">
-          <li>
-            <img src="./images/team1.jpg" alt="Игорь Демьяненко" width="270" />
-            <h3 class="team-sub-title">Игорь Демьяненко</h3>
-            <p class="team-text">Product Designer</p>
-          </li>
-          <li>
-            <img src="./images/team2.jpg" alt="Ольга Репина" width="270" />
-            <h3 class="team-sub-title">Ольга Репина</h3>
-            <p class="team-text">Frontend Developer</p>
-          </li>
-          <li>
-            <img src="./images/team3.jpg" alt="Николай Тарасов" width="270" />
-            <h3 class="team-sub-title">Николай Тарасов</h3>
-            <p class="team-text">Marketing</p>
-          </li>
-          <li>
-            <img src="./images/team4.jpg" alt="Михаил Ермаков" />
-            <h3 class="team-sub-title">Михаил Ермаков</h3>
-            <p class="team-text">UI Designer</p>
-          </li>
-        </ul>
-      </section>
-    </main>
-    <footer class="footer-bcg">
-      <a href="./index.html" class="footer-logo"
-        ><span class="logo-item">Web</span>Studio</a
-      >
-      <address class="address">
-        <p class="footer-text">г. Киев, пр-т Леси Украинки, 26</p>
-        <ul class="list">
-          <li>
-            <a href="mailto:info@devstudio.com" class="footer-contacts"
+    <header class="header-page">
+      <div class="container">
+        <a href="./index.html" class="logo"
+          ><span class="logo-item">Web</span>Studio</a
+        >
+        <nav class="navigation">
+          <ul class="menu list">
+            <li class="menu-item">
+              <a href="./index.html" class="link is-active">Студия</a>
+            </li>
+            <li class="menu-item">
+              <a href="./portfolio.html" class="link">Портфолио</a>
+            </li>
+            <li class="menu-item"><a href="" class="link">Контакты</a></li>
+          </ul>
+        </nav>
+        <ul class="menu list">
+          <li class="menu-item">
+            <a href="mailto:info@devstudio.com" class="contact-list"
               >info@devstudio.com</a
             >
           </li>
-          <li>
-            <a href="tel:+380961111111" class="footer-contacts"
+          <li class="menu-item">
+            <a href="tel:+380961111111" class="contact-list"
               >+38 096 111 11 11</a
             >
           </li>
         </ul>
-      </address>
+      </div>
+    </header>
+    <main>
+      <section class="section hero">
+        <div class="container">
+          <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
+          <button type="button" class="button">Заказать услугу</button>
+        </div>
+      </section>
+      <section class="section">
+        <div class="container">
+          <h2 class="visually-hidden">Наши преимущества</h2>
+          <ul class="list list-container">
+            <li class="list-item">
+              <h3 class="sub-title">ВНИМАНИЕ К ДЕТАЛЯМ</h3>
+              <p class="text">
+                Идейные соображения, а также начало повседневной работы по
+                формированию позиции.
+              </p>
+            </li>
+            <li class="list-item">
+              <h3 class="sub-title">ПУНКТУАЛЬНОСТЬ</h3>
+              <p class="text">
+                Задача организации, в особенности же рамки и место обучения
+                кадров влечет за собой.
+              </p>
+            </li>
+            <li class="list-item">
+              <h3 class="sub-title">ПЛАНИРОВАНИЕ</h3>
+              <p class="text">
+                Равным образом консультация с широким активом в значительной
+                степени обуславливает.
+              </p>
+            </li>
+            <li class="list-item">
+              <h3 class="sub-title">СОВРЕМЕННЫЕ ТЕХНОЛОГИИ</h3>
+              <p class="text">
+                Значимость этих проблем настолько очевидна, что реализация
+                плановых заданий.
+              </p>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <section class="section">
+        <div class="container">
+          <h2 class="title">Чем мы занимаемся</h2>
+          <ul class="list list-container">
+            <li class="list-item">
+              <img
+                src="./images/img1.jpg"
+                alt="Человек работает с кодом"
+                width="370"
+              />
+            </li>
+            <li class="list-item">
+              <img
+                src="./images/img2.jpg"
+                alt="Человек работает со стилями"
+                width="370"
+              />
+            </li>
+            <li class="list-item">
+              <img
+                src="./images/img3.jpg"
+                alt="Человек работает выбирает цвет"
+              />
+            </li>
+          </ul>
+        </div>
+      </section>
+      <section class="section dif-section">
+        <div class="container">
+          <h2 class="title">Наша команда</h2>
+          <ul class="list list-container">
+            <li class="list-item team-item">
+              <img
+                src="./images/team1.jpg"
+                alt="Игорь Демьяненко"
+                width="270"
+              />
+              <h3 class="team-sub-title">Игорь Демьяненко</h3>
+              <p class="team-text">Product Designer</p>
+            </li>
+            <li class="list-item team-item">
+              <img src="./images/team2.jpg" alt="Ольга Репина" width="270" />
+              <h3 class="team-sub-title">Ольга Репина</h3>
+              <p class="team-text">Frontend Developer</p>
+            </li>
+            <li class="list-item team-item">
+              <img src="./images/team3.jpg" alt="Николай Тарасов" width="270" />
+              <h3 class="team-sub-title">Николай Тарасов</h3>
+              <p class="team-text">Marketing</p>
+            </li>
+            <li class="list-item team-item">
+              <img src="./images/team4.jpg" alt="Михаил Ермаков" width="270" />
+              <h3 class="team-sub-title">Михаил Ермаков</h3>
+              <p class="team-text">UI Designer</p>
+            </li>
+          </ul>
+        </div>
+      </section>
+    </main>
+    <footer class="footer-bcg">
+      <div class="container">
+        <a href="./index.html" class="footer-logo"
+          ><span class="logo-item">Web</span>Studio</a
+        >
+        <address class="address">
+          <p class="footer-text">г. Киев, пр-т Леси Украинки, 26</p>
+          <ul class="list">
+            <li class="footer-list-item">
+              <a href="mailto:info@devstudio.com" class="footer-contacts"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li>
+              <a href="tel:+380961111111" class="footer-contacts"
+                >+38 096 111 11 11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </footer>
   </body>
 </html>
