--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </head>
   <body>
     <header class="header-page">
-      <div class="container">
+      <div class="container header-container">
         <a href="./index.html" class="logo"
           ><span class="logo-item">Web</span>Studio</a
         >
@@ -54,7 +54,7 @@
           <button type="button" class="button">Заказать услугу</button>
         </div>
       </section>
-      <section class="section">
+      <section class="section adv-section">
         <div class="container">
           <h2 class="visually-hidden">Наши преимущества</h2>
           <ul class="list list-container">
@@ -126,23 +126,31 @@
                 alt="Игорь Демьяненко"
                 width="270"
               />
-              <h3 class="team-sub-title">Игорь Демьяненко</h3>
-              <p class="team-text">Product Designer</p>
+              <div class="text-container">
+                <h3 class="team-sub-title">Игорь Демьяненко</h3>
+                <p class="team-text">Product Designer</p>
+              </div>
             </li>
             <li class="list-item team-item">
               <img src="./images/team2.jpg" alt="Ольга Репина" width="270" />
-              <h3 class="team-sub-title">Ольга Репина</h3>
-              <p class="team-text">Frontend Developer</p>
+              <div class="text-container">
+                <h3 class="team-sub-title">Ольга Репина</h3>
+                <p class="team-text">Frontend Developer</p>
+              </div>
             </li>
             <li class="list-item team-item">
               <img src="./images/team3.jpg" alt="Николай Тарасов" width="270" />
-              <h3 class="team-sub-title">Николай Тарасов</h3>
-              <p class="team-text">Marketing</p>
+              <div class="text-container">
+                <h3 class="team-sub-title">Николай Тарасов</h3>
+                <p class="team-text">Marketing</p>
+              </div>
             </li>
             <li class="list-item team-item">
               <img src="./images/team4.jpg" alt="Михаил Ермаков" width="270" />
-              <h3 class="team-sub-title">Михаил Ермаков</h3>
-              <p class="team-text">UI Designer</p>
+              <div class="text-container">
+                <h3 class="team-sub-title">Михаил Ермаков</h3>
+                <p class="team-text">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
