--- a/portfolio.html
+++ b/portfolio.html
@@ -18,7 +18,7 @@
   </head>
   <body>
     <header class="header-page">
-      <div class="container">
+      <div class="container header-container">
         <a href="./index.html" class="logo"
           ><span class="logo-item">Web</span>Studio</a
         >
@@ -89,8 +89,12 @@
                 alt="Игра в баскетбол"
                 width="370"
               />
-              <h2 class="portfolio-title">Постер New Orlean vs Golden Star</h2>
-              <p class="portfolio-text">Дизайн</p>
+              <div class="text-container">
+                <h2 class="portfolio-title">
+                  Постер New Orlean vs Golden Star
+                </h2>
+                <p class="portfolio-text">Дизайн</p>
+              </div>
             </li>
 
             <li class="portfolio-element">
