--- a/index.html
+++ b/index.html
@@ -389,13 +389,11 @@
           <ul class="list client-list">
             <li>
               <!-- prettier-ignore -->
-              <a class="client-link" href=""
-
-                ><svg class="client-icon" width="170px" height="90px">
+              <a class="client-link" href="" target="_blank" rel="noonpener noreferer">
+                <svg class="client-icon" width="170px" height="90px">
                   <use
                     href="./images/sprite.svg#icon-logo1"
-                    target="_blank"
-                    rel="noonpener noreferer"
+                    
                   ></use></svg></a>
             </li>
             <li>
