--- a/index.html
+++ b/index.html
@@ -159,8 +159,6 @@
                   <li class="soc-icons-item">
                     <a
                       class="soc-icons-link"
-                      width="70px"
-                      height="70px"
                       href=""
                       target="_blank"
                       rel="noonpener noreferer"
@@ -388,13 +386,16 @@
           <h2 class="title">Постоянные клиенты</h2>
           <ul class="list client-list">
             <li>
-              <!-- prettier-ignore -->
-              <a class="client-link" href="" target="_blank" rel="noonpener noreferer">
+              <a
+                class="client-link"
+                href=""
+                target="_blank"
+                rel="noonpener noreferer"
+              >
                 <svg class="client-icon" width="170px" height="90px">
-                  <use
-                    href="./images/sprite.svg#icon-logo1"
-                    
-                  ></use></svg></a>
+                  <use href="./images/sprite.svg#icon-logo1"></use>
+                </svg>
+              </a>
             </li>
             <li>
               <a
