исправил хедер и портфолио

--- a/portfolio.html
+++ b/portfolio.html
@@ -240,7 +240,11 @@
                 target="_blank"
                 rel="noonpener noreferer"
               >
-                <svg class="footer-socials-icons-svg">
+                <svg
+                  class="footer-socials-icons-svg"
+                  width="20px"
+                  height="20px"
+                >
                   <use href="./images/sprite.svg#icon-instagram"></use>
                 </svg>
               </a>
@@ -252,7 +256,11 @@
                 target="_blank"
                 rel="noonpener noreferer"
               >
-                <svg class="footer-socials-icons-svg">
+                <svg
+                  class="footer-socials-icons-svg"
+                  width="20px"
+                  height="20px"
+                >
                   <use href="./images/sprite.svg#icon-twitter"></use>
                 </svg>
               </a>
@@ -264,7 +272,11 @@
                 target="_blank"
                 rel="noonpener noreferer"
               >
-                <svg class="footer-socials-icons-svg">
+                <svg
+                  class="footer-socials-icons-svg"
+                  width="20px"
+                  height="20px"
+                >
                   <use href="./images/sprite.svg#icon-facebook"></use>
                 </svg>
               </a>
@@ -276,7 +288,11 @@
                 target="_blank"
                 rel="noonpener noreferer"
               >
-                <svg class="footer-socials-icons-svg">
+                <svg
+                  class="footer-socials-icons-svg"
+                  width="20px"
+                  height="20px"
+                >
                   <use href="./images/sprite.svg#icon-linkedin"></use>
                 </svg>
               </a>
